syntax = "proto3";

package GameMapData;

message MapDecor
{
	int32 DecorType = 1;
	float X = 2;
	float Y = 3;
}


message MapTile
{
	int32 TileType = 1;
	int32 X = 2;
	int32 Y = 3;
	repeated MapDecor Decors = 4;
	
}

message MapData
{
	string MapId = 1;
	uint32 MapWidth = 2;
	uint32 MapHeight = 3;
	uint32 Direction = 4;
	float CellSize = 5;
	float TileSize = 6;
	bytes Obstacles = 7;
	repeated MapTile MapTiles = 8;
}

